# OS_lab2

Exercise_1/: CMakeLists.txt
Exercise_1/include/: children.h  greetings.h
Exercise_1/src/: greetings.c  main.c  notas.txt
Exercise_4/include/: notas.txt
exercise_1/: CMakeLists.txt
exercise_1/children/: CMakeLists.txt
exercise_1/children/src/: children.c
exercise_1/greetings/: CMakeLists.txt
exercise_1/greetings/include/: greetings.h
exercise_1/include/: children.h
exercise_1/src/: children.c  main.c  notas.txt
exercise_2/: CMakeLists.txt  notes.txt
exercise_2/include/: terminal.h
exercise_2/src/: main.c  terminal.c
exercise_3/: CMakeLists.txt  notes.txt
exercise_3/counter_handler/: CMakeLists.txt
exercise_3/counter_handler/include/: counter_handler.h
exercise_3/counter_handler/src/: counter_handler.c  main.c
exercise_3/include/: infinite_counter.h
exercise_3/infinite_counter/: CMakeLists.txt
exercise_3/infinite_counter/include/: infinite_counter.h
exercise_3/infinite_counter/src/: infinite_counter.c  main.c
exercise_3/src/: infinite_counter.c  main.c
exercise_4/: CMakeLists.txt  notes.txt
exercise_4/message_queue/reader/: CMakeLists.txt
exercise_4/message_queue/writer/: CMakeLists.txt
exercise_4/message_queue/writer/include/: writer.h
exercise_4/message_queue/writer/src/: writer.c
exercise_4/reader/src/: reader.c
exercise_4/shared_memory/reader/: CMakeLists.txt
exercise_4/src/: writer.c
exercise_4/writer/include/: writer.h
greeting/src/: main.c
greetings/include/: greetings.h
greetings/src/: greetings.c
(+9 files in other folders)
